[package]
name = "OLink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "OLink"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
csv = "1.1"
serde= {version="1", features=["derive"]}
rayon="1.5"
bincode = "1.3.3"
serde_derive = "1.0.132"
rand = "0.8.4"
ndarray = "0.15.4"
numpy = "0.15"
rand_distr = "0.4"